# Tracker

hardware/: Makefile  tracker.bck  tracker.cmp  tracker.dcm  tracker.kicad_pcb  tracker.lib  tracker.mod  tracker.net  tracker.pro  tracker.sch
parts/: Gear_Double_Helical.scad  bottom.scad  button.scad  electronics.scad  housing.scad  large_gear.scad  nut.scad  small_gear.scad  spacerring.scad  stencil.scad  top.scad
software/: AUTHORS  ChangeLog  Makefile.am  README  button.c  button.h  configure.ac  configureit  direction.c  direction.h  led.c  led.h  timer.c  timer.h  tracker.c
